crates/fwob/tests/ui/derive/ignored_key.stderr
error: the key field cannot be ignored
 --> tests/ui/derive/ignored_key.rs:6:5
  |
6 |     key: i32,
  |     ^^^
