crates/fwob/tests/ui/derive/ignored_key.rs
use fwob_core::FwobFrame;

#[derive(FwobFrame)]
struct IgnoredKey {
    #[fwob(key, ignore)]
    key: i32,
}

fn main() {}
